--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="col-12 narrow text-center">
             <h1>Art is what we live for</h1>
             <h2>Design is what we do</h2>
-            <p class="lead">We find passion in your ideas and we build them like our own. Our design will flower into your success! If you have a brave new idea we would love to hear it. Find our contacts at the bottom of the page.</p>
+            <p class="lead">We find passion in your ideas and we build them like our own. Our design will flower into your success! If you have a brave new idea we would love to hear it! Find our contacts at the bottom of the page.</p>
             <a class="btnSecondary btn-secondary btn-md" href="#contact" target="_blank">Contacts</a>
         </div>
     </div>
