--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="bootstrap-4.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/fixed.css">
+    <link rel="icon" href="img/logo.png">
 </head>
 
 <body data-spy="scroll" data-target="#navbarResponsive">
