--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="bootstrap-4.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/fixed.css">
-    <link rel="icon" href="img/logo.png">
+    <link rel="icon" href="img/logo4.png">
 </head>
 
 <body data-spy="scroll" data-target="#navbarResponsive">
@@ -20,7 +20,7 @@
         <!--Navigation-->
 
         <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="index.html"><img src="img/logo.png">
+            <a class="navbar-brand" href="index.html"><img src="img/logo4.png">
                 <a>Allien Design</a></a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -66,7 +66,7 @@
                 <div class="carousel-item active" style="background-image: url(img/main1.jpg);">
                     <div class="carousel-caption text-center">
 
-                        <h1>Welcome to Allien Design</h1>
+                        <h1>Welcome to <br>Allien Design</h1>
                         <h3>We turn ideas into success</h3>
 
                         <a class="btn btn-outline-light btn-lg" href="#portfolio">Get Started</a>
@@ -107,7 +107,7 @@
     </div>
     <!--- End Design Section -->
     <!-- Start Portfolio Section-->
-    <div id="portfolio">
+    <div id="portfolio" class="offset">
 
         <div class="jumbotron container-fluid">
             <h1 class="heading">Portfolio</h1>
@@ -167,7 +167,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(img/portfolio/5.png)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(img/logo4.png)"></div>
 
                     <div class="img-text-wrapper">
 
@@ -200,20 +200,47 @@
 
 
     <!-- Start Team Section-->
-    <div id="team">
-        <div class="team-items">
-            <div class="team-item">
-                <div class="team-image" style="background-image: url(img/team/me.jpg)"></div>
-            </div>
-            <div class="team-item">
-                <div class="team-image" style="background-image: url(img/team/alex.jpg)"></div>
-            </div>
+    <div id="team" class="offset">
+        <div class="col-12 text-center">
+            <h3 class="heading">Team</h3>
+            <div class="heading-underline"></div>
         </div>
+
+        <div class="row padding">
+
+            <div class="col-md-6">
+                <div class="card text-center">
+                    <img class="card-img-top" src="img/team/alex.jpg">
+                    <div class="card-body">
+                        <h4>Alex Naumova</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi voluptatibus nobis tenetur? Doloremque veniam a animi, quasi assumenda, tempora facilis odio eos repellendus blanditiis, fugit magnam omnis eligendi. Laborum, rerum?</p>
+
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="col-md-6">
+                <div class="card text-center">
+                    <img class="card-img-top" src="img/team/me.jpg">
+                    <div class="card-body">
+                        <h4>Mihail Stoychev</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi voluptatibus nobis tenetur? Doloremque veniam a animi, quasi assumenda, tempora facilis odio eos repellendus blanditiis, fugit magnam omnis eligendi. Laborum, rerum?</p>
+
+                    </div>
+                </div>
+
+            </div>
+
+
+        </div>
+        <!-- End of Row-->
+
     </div>
     <!--End of Team Section-->
 
     <!-- Start of Info Section-->
-    <div id="info">
+    <div id="info" class="offset">
         <div class="skewed">
             <div class="info_container">
                 <div class="info_box">
@@ -254,7 +281,27 @@
     <!--End of Info Section-->
 
     <!-- Start Contact Section-->
-    <div id="contact">
+    <div id="contact" class="offset">
+
+        <footer>
+            <div class="row justify-content-center">
+                <div class="col-md-5 text-center">
+                    <img src="img/logo3.png">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit culpa modi officia voluptatum non laborum repellat? Dolore vitae sequi illo nulla quis nobis modi nihil pariatur, eligendi optio, corrupti sed.</p>
+
+                    <strong>Contact info</strong>
+                    <p>(359) 888-8888 <br> email.email@email.com</p>
+
+                    <a href="https://facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                </div>
+
+                <hr class="socket"> &copy; A.N Design
+
+            </div>
+            <!--End of Row-->
+        </footer>
 
     </div>
     <!--End of Contact Section-->
